JACK Audio Connection Kit - Qt GUI Interface
--------------------------------------------

ChangeLog

0.2.8   2004-04-21  System tray icon and menu option.

- New option for system tray icon and menu, which is only effective
  on KDE enabled desktops.

- The hifen is now a legal character for preset names.


0.2.7b  2004-04-05  OSS driver setup fix.

- OSS driver halfduplex setup operation is now fixed, thanks to
  Jussi Laako.


0.2.7a  2004-04-05  Compilation fix for Qt 3.1.

- QSplitter::setChildrenCollapsible call is now conditionally compiled, 
  applied only on Qt 3.2+.


0.2.7   2004-04-04  User-interface refinements and OSS driver support.

- Connections and patchbay windows horizontal layout are now user
  configurable via splitter widgets.

- Refresh on connections window now take effect on both tabs, Audio
  (JACK) and MIDI (ALSA).

- OSS driver support and no-mlock option added to server settings, setup
  dialog (as of JACK 0.95.7+).

- Temporary server configuration option added, applicable to the auto-start
  server feature on client applications, whether the server shall exit once
  all clients are closed.

- Server mode (RT) status display added.

- Warning messages are now prompted to the user when there are any pending
  changes not saved nor applied while on the setup dialog.

- Translation support for the default preset name "(default)".

- Messages window pops up whenever a critical error message is issued.


0.2.6   2004-02-29  More work in progress.

- Message window line limit is now a configurable option on setup, as is
  whether the command-line local configuration file gets saved at all;
  the first argument of the command-line configuration is stuffed
  to be the executable server command absolute path, when possible. 

- Warning message issued if ALSA sequencer is not available on startup;
  also if server settings are changed while client is currently active.

- Server autostart magic is locally disabled by forcing the environment 