@@ -22,14 +22,14 @@ if test "x$ac_debug" = "xdebug"; then
    AC_DEFINE(CONFIG_DEBUG, 1, [Define if debugging is enabled.])
 fi
 
-dnl Enable KDE systray option.
-AC_ARG_ENABLE(kde,
-  [  --disable-kde           disable KDE system tray (default=no)],
-  [ac_kde="no"],
-  [ac_kde="yes"])
+dnl Disable system tray argument option.
+AC_ARG_ENABLE(system_tray,
+  [  --disable-system-tray   disable system tray (default=no)],
+  [ac_system_tray="no"],
+  [ac_system_tray="yes"])
 
-if test "x$ac_kde" = "xyes"; then
-   AC_DEFINE(CONFIG_KDE, 1, [Define if KDE system tray is enabled.])
+if test "x$ac_system_tray" = "xyes"; then
+   AC_DEFINE(CONFIG_SYSTEM_TRAY, 1, [Define if system tray is enabled.])
 fi
 
 dnl Checks for programs.
