@@ -5,8 +5,9 @@ ChangeLog
 
 0.2.8   2004-04-21  System tray icon and menu option.
 
-- New option for system tray icon and menu, which is only effective
-  on KDE enabled desktops.
+- New option for system tray icon and menu, which is known to be effective
+  on KDE enabled desktops; support for freedesktop.org's system tray protocol
+  specification has been included but not confirmed to date.
 
 - The hifen is now a legal character for preset names.
 
